style: fix layout shifting when ran on different machines

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@
 body {
   display: grid;
   place-items: center;
+  min-height: 100vh;
 }
 button {
   border: 0;
@@ -37,7 +38,6 @@ button {
   font-size: 5rem;
   font-weight: bold;
   letter-spacing: 3px;
-  -webkit-text-stroke: 1px black;
   text-align: center;
   opacity: 0; /* Hidden by default */
   visibility: hidden; /* Prevent interaction when hidden */
@@ -122,12 +122,10 @@ button {
 
 /* Board  elements*/
 .board {
-  width: 65%;
-  height: 0;
+  width: 100%;
+  height: 100%;
 
   display: grid;
-  grid-template-rows: 1fr 1fr 1fr;
-  grid-template-columns: 1fr;
   justify-content: center;
   align-content: center;
 
@@ -139,7 +137,7 @@ button {
   height: 100%;
   display: grid;
   grid-template-rows: 1fr;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(3, 1fr);
   place-items: center;
 }
 
@@ -151,8 +149,8 @@ button {
   background-color: var(--color-primary);
 
   border: none;
-  width: 100%;
-  height: 100%;
+  width: 200px;
+  height: auto;
   text-align: center;
   font-size: 12rem;
   font-weight: var(--font-weight-medium);
